--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,14 @@
 @import "ionic.globals";
 
 
+// App theme variables
+$fistColorApp: #3DC960;
+$secondColorApp: #F0515D;
+$firstColorContent: #2C2C39;
+$secondColorContent: #21212D;
+
+
+
 // Shared Variables
 // --------------------------------------------------
 // To customize the look and feel of this app, you can override
@@ -10,8 +18,8 @@
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-$text-color:        #000;
-$background-color:  #fff;
+$text-color:        #FFF;
+$background-color:  $firstColorContent;
 
 
 // Named Color Variables
@@ -23,7 +31,7 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
+  primary:    $fistColorApp,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
@@ -69,3 +77,16 @@ $colors: (
 
 $ionicons-font-path: "../assets/fonts";
 @import "ionicons";
+
+
+
+
+// ***** Rewrite values variable *****
+
+
+// Popover
+$popover-md-background: $firstColorContent;
+
+
+// List
+$list-md-border-color: $secondColorContent;
