Basic structure of the application

--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,3 +1,8 @@
-page-contact {
-
+page-settings {
+  ion-content {
+    .fixed-content,
+    .scroll-content {
+      margin-bottom: 0 !important;
+    }
+  }
 }
