--- a/src/components/add-transaction-action/add-transaction-action.component.html
+++ b/src/components/add-transaction-action/add-transaction-action.component.html
@@ -1,3 +1,3 @@
-<button ion-button icon-only (click)="handleClick()">
-    <ion-icon name="home"></ion-icon>
+<button ion-button icon-only (click)="handlerClick()" class="button-add-transaction">
+    <ion-icon name="add"></ion-icon>
 </button>
