--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -81,9 +81,28 @@ $ionicons-font-path: "../assets/fonts";
 
 
 
+// Colors category
+$colorFood: #E84C3D;
+$colorDress: #F59D1F;
+$colorCar: #34495E;
+$colorPhone: #297FB8;
+$colorAnimals: #4CAF50;
+$colorGifts: #03A9F4;
+$colorHealth: #C5382F;
+$colorEntertainment: #009688;
+$colorBill: #3F51B5;
+$colorTravel: #67B9CE;
+$colorLearning: #8BC34A;
+$colorRepairs: #795548;
+$colorSport: #FF6F00;
+$colorOther: #9E9E9E;
+$colorJob: #4CAF50;
+$colorGifts2: #03A9F4;
+
+
+
+
 // ***** Rewrite values variable *****
-
-
 
 
 
