Create transaction components

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -28,4 +28,5 @@
 @import '../theme/components/datetime';
 
 @import '../theme/blocks/balance-group';
+@import '../theme/blocks/category';
 @import '../theme/blocks/icon-category';
