--- a/src/components/category-icon/category-icon.component.html
+++ b/src/components/category-icon/category-icon.component.html
@@ -1,3 +1,3 @@
-<div class="container-icon-category">
+<div class="container-icon-category zoomIn animated">
     <div class="b-flaticon b-icon-category flaticon-{{name}} is-{{name}}"></div>
 </div>
