--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -5,4 +5,10 @@ page-settings {
       margin-bottom: 0 !important;
     }
   }
+  .item-input .label-md {
+    color: #FFF;
+  }
+  .text-input-md {
+    text-align: right;
+  }
 }
