Dev create transaction

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,6 +20,7 @@
 
 @import '../theme/libs/animate';
 @import '../theme/libs/grid';
+@import '../theme/libs/utils';
 
 @import '../theme/components/buttons';
 @import '../theme/components/header';
