--- a/src/components/modal-transaction/modal-transaction.component.html
+++ b/src/components/modal-transaction/modal-transaction.component.html
@@ -14,15 +14,14 @@
 
 <ion-content>
 
-    <ion-list>
-        <ion-item>
-            <ion-input type="text" placeholder="Заголовок"></ion-input>
-        </ion-item>
-    </ion-list>
-
+    <ion-item>
+        <ion-input type="text" placeholder="Заголовок"></ion-input>
+    </ion-item>
 
     <numbers-area-component></numbers-area-component>
 
-    <button ion-button>Готово</button>
+    <div class="util-align-center">
+        <button class="b-button-ready" ion-button>Готово</button>
+    </div>
 
 </ion-content>
