Dev create transaction

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -27,6 +27,7 @@
 @import '../theme/components/content';
 @import '../theme/components/picker';
 @import '../theme/components/datetime';
+@import '../theme/components/toast';
 
 @import '../theme/blocks/balance-group';
 @import '../theme/blocks/category';
