--- a/src/components/transaction-form/transaction-form.component.html
+++ b/src/components/transaction-form/transaction-form.component.html
@@ -11,9 +11,9 @@
 
 <div padding>
     <div class="grid-row">
-        <div class="grid-column-3 grid-padding grid-left" *ngFor="let category of categories; let i = index">
+        <div class="grid-column-3 grid-padding grid-left" *ngFor="let category of categories;">
             <div class="container-category-group">
-                <div [ngClass]="{'b-category': true, 'is-selected': (i + 1) === indexSelected}" (click)="choiceCategory(i + 1)">
+                <div [ngClass]="{'b-category': true, 'is-selected': category.id === indexSelected}" (click)="choiceCategory(category.id)">
                     <category-icon-component [name]="category.slug"></category-icon-component>
                     <div class="category__name">{{ category.name }}</div>
                 </div>
