--- a/src/theme/libs/animate.scss
+++ b/src/theme/libs/animate.scss
@@ -27,7 +27,30 @@
   animation-name: zoomIn;
 }
 
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
 
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
 
 
 
