--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -28,6 +28,8 @@
 @import '../theme/components/picker';
 @import '../theme/components/datetime';
 @import '../theme/components/toast';
+@import '../theme/components/select';
+@import '../theme/components/alert';
 
 @import '../theme/blocks/balance-group';
 @import '../theme/blocks/category';
