Dev templates page

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -30,6 +30,7 @@
 @import '../theme/components/toast';
 @import '../theme/components/select';
 @import '../theme/components/alert';
+@import '../theme/components/sliding';
 
 @import '../theme/blocks/balance-group';
 @import '../theme/blocks/category';
