--- a/src/theme/blocks/category.scss
+++ b/src/theme/blocks/category.scss
@@ -17,4 +17,11 @@
     text-align: center;
     white-space: nowrap;
   }
+
+  &.is-selected {
+    .category__name {
+      color: $fistColorApp
+    }
+  }
+
 }
