Dev templates page

--- a/src/components/transaction-modal/transaction-modal.component.html
+++ b/src/components/transaction-modal/transaction-modal.component.html
@@ -21,7 +21,7 @@
     <numbers-area-component [value]="outSum" (updatedSum)="updatedSum($event)"></numbers-area-component>
 
     <div class="util-align-center">
-        <button class="b-button-ready" ion-button (click)="onReady()" [disabled]="!isDataFilled">Добавить</button>
+        <button class="b-button-ready" ion-button (click)="onReady()" [disabled]="!isDataFilled">Готово</button>
     </div>
 
 </ion-content>
