--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,7 +32,7 @@ $background-color:  $firstColorContent;
 
 $colors: (
   primary:    $fistColorApp,
-  secondary:  #32db64,
+  secondary:  #01A7F2,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
