--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -31,6 +31,7 @@
 @import '../theme/components/select';
 @import '../theme/components/alert';
 @import '../theme/components/sliding';
+@import '../theme/components/form';
 
 @import '../theme/blocks/balance-group';
 @import '../theme/blocks/category';
