--- a/src/theme/libs/utils.scss
+++ b/src/theme/libs/utils.scss
@@ -8,3 +8,10 @@
   text-align: center;
   background: $secondColorContent;
 }
+
+.util-info-box {
+  padding: 15px;
+  line-height: 1.5em;
+  border-radius: 3px;
+  background: $secondColorContent;
+}
