--- a/src/pages/templates/templates.html
+++ b/src/pages/templates/templates.html
@@ -13,9 +13,6 @@
 </ion-header>
 
 <ion-content>
-    <div class="util-align-center" style="margin-top: 25px;" *ngIf="totalCount == -1">
-        <ion-spinner color="secondary"></ion-spinner>
-    </div>
 
     <div *ngIf="totalCount == 0">
         <div class="util-empty-box fadeIn animated">Нет созданных шаблонов</div>
@@ -41,7 +38,7 @@
 
     <br>
 
-    <div class="util-align-center" *ngIf="loadedTemplates">
+    <div class="util-align-center fadeIn animated" *ngIf="loadedTemplates">
         <button ion-button (click)="handlerClickCreate($event)">Создать новый</button>
     </div>
 
