--- a/src/theme/components/toast.scss
+++ b/src/theme/components/toast.scss
@@ -1,7 +1,7 @@
 .toast-md {
   .toast-wrapper {
     max-width: 100%;
-    background: $secondColorContent;
+    background: $fistColorApp;
   }
   .toast-container {
     min-height: 6.5rem;
