--- a/src/theme/blocks/category.scss
+++ b/src/theme/blocks/category.scss
@@ -1,7 +1,7 @@
 .b-category {
   width: auto;
   display: inline-block;
-  padding: 10px;
+  padding: 10px 0;
   background: transparent;
   border-radius: 10px;
   transition: 0.3s;
