--- a/src/components/transaction-form/transaction-form.component.html
+++ b/src/components/transaction-form/transaction-form.component.html
@@ -1,6 +1,6 @@
 
 
-<ion-segment [(ngModel)]="type" (ionChange)="handlerSelectType($event)">
+<ion-segment [(ngModel)]="type" (ionChange)="handlerSelectType()">
     <ion-segment-button value="0">
         Расход
     </ion-segment-button>
