--- a/src/components/transaction-modal/transaction-modal.component.html
+++ b/src/components/transaction-modal/transaction-modal.component.html
@@ -14,14 +14,22 @@
 
 <ion-content>
 
-    <ion-item>
-        <ion-input type="text" placeholder="Описание" [(ngModel)]="description" (ngModelChange)="changeDescription()"></ion-input>
-    </ion-item>
+    <form (ngSubmit)="onReady()">
 
-    <numbers-area-component [value]="outSum" (updatedSum)="updatedSum($event)"></numbers-area-component>
+        <div padding>
+            <ion-item>
+                <ion-label stacked>Описание записи</ion-label>
+                <ion-input type="text" placeholder="{{ placeholder }}" [(ngModel)]="description" name="description" (ngModelChange)="changeDescription()"></ion-input>
+            </ion-item>
 
-    <div class="util-align-center">
-        <button class="b-button-ready" ion-button (click)="onReady()" [disabled]="!isDataFilled">Готово</button>
-    </div>
+        </div>
+
+        <numbers-area-component [value]="outSum" (updatedSum)="updatedSum($event)"></numbers-area-component>
+
+        <div class="util-align-center">
+            <button  class="b-button-ready" ion-button [disabled]="!isDataFilled" ion-button type="submit">Готово</button>
+        </div>
+
+    </form>
 
 </ion-content>
