--- a/src/theme/blocks/balance-group.scss
+++ b/src/theme/blocks/balance-group.scss
@@ -1,17 +1,16 @@
 
 .container-balance {
-  background: $fistColorApp;
   text-align: center;
 }
 
 .b-balance-group {
-  padding: 10px 15px;
+  padding: 10px 0;
   text-align: center;
   display: inline-block;
   .balance-group__value {
     font-size: 2.5rem;
   }
   .balance-group__subtitle {
-
+    color: $secondColorApp;
   }
 }
