--- a/src/theme/components/select.scss
+++ b/src/theme/components/select.scss
@@ -1,5 +1,5 @@
 .container-select {
-  background: darken($fistColorApp, 3%);
+  background: $secondColorContent;
   &.item-block {
     .item-inner {
       border: 0;
