--- a/src/theme/libs/utils.scss
+++ b/src/theme/libs/utils.scss
@@ -3,14 +3,9 @@
   text-align: center;
 }
 
-.util-empty-box {
-  padding: 20px;
-  text-align: center;
-  background: $secondColorContent;
-}
-
 .util-info-box {
   padding: 15px;
+  margin-bottom: 15px;
   line-height: 1.5em;
   border-radius: 3px;
   background: $secondColorContent;
