--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,10 +4,10 @@
 
 
 // App theme variables
-$fistColorApp: #3DC960;
-$secondColorApp: #F0515D;
-$firstColorContent: #2C2C39;
-$secondColorContent: #21212D;
+$firstColorApp: #26ABE3;
+$secondColorApp: #646F91;
+$firstColorContent: #293350;
+$secondColorContent: #262f49;
 
 
 
@@ -31,7 +31,7 @@ $background-color:  $firstColorContent;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    $fistColorApp,
+  primary:    $firstColorApp,
   secondary:  #01A7F2,
   danger:     #f53d3d,
   light:      #f4f4f4,
@@ -100,6 +100,11 @@ $colorJob: #4CAF50;
 $colorGifts2: #03A9F4;
 
 
+
+// *** gradation
+$colorHigh: #2ED85B;
+$colorMiddle: #F59D1F;
+$colorLow: #e74b3c;
 
 
 // ***** Rewrite values variable *****
