--- a/src/components/numbers-area/numbers-area.component.scss
+++ b/src/components/numbers-area/numbers-area.component.scss
@@ -4,43 +4,64 @@
 
 .b-number-display {
   display: flex;
-  height: 6rem;
+  height: 4rem;
   margin-bottom: 5px;
   padding: 0 16px;
   align-items: center;
   justify-content: center;
   font-size: 2.5rem;
-  background: $secondColorContent;
-  border-bottom: 1px solid $firstColorContent;
 }
 
 
 .container-numbers {
-  width: 100%;
+  width: 300px;
+  margin: 16px auto;
   display: flex;
   flex-wrap: wrap;
   white-space: nowrap;
+  box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.11);
+  border-radius: 5px;
 }
 .b-number {
   width: 33.33%;
   display: flex;
-  height: 6rem;
   text-align: center;
-  font-size: 2.2rem;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  &:active {
-    .number__inner {
-      background: $secondColorContent;
-      border-radius: 3px;
+
+  .button-md {
+    box-shadow: none;
+    background: $secondColorContent;
+    width: 100%;
+    height: 70px;
+    font-size: 22px;
+    margin: 1px;
+  }
+
+
+  &:nth-child(1) {
+    .button-md {
+      border-radius: 5px 0 0 0;
     }
   }
-  .number__inner {
-    height: 42px;
-    width: 42px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+  &:nth-child(3) {
+    .button-md {
+      border-radius: 0 5px 0 0;
+    }
   }
+
+  &:nth-child(10) {
+    .button-md {
+      border-radius: 0 0 0 5px;
+    }
+  }
+
+  &:nth-child(3) {
+    .button-md {
+      border-radius: 0 0 5px 0;
+    }
+  }
+
 }
