--- a/src/components/progressbar/progressbar.component.scss
+++ b/src/components/progressbar/progressbar.component.scss
@@ -2,31 +2,36 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  position: relative;
+  overflow: hidden;
   .progressbar__line {
     display: flex;
     width: 100%;
-    height: 8px;
+    height: 42px;
     background: $secondColorContent;
-    border-radius: 5px;
   }
     .progressbar__inner-line {
-      background: $fistColorApp;
+      background: $firstColorApp;
       transition: width 1s;
-      border-radius: 5px;
   }
   .progressbar__data {
-    display: flex;
-    justify-content: space-between;
     width: 100%;
-    margin-top: 10px;
+    justify-content: space-between;
+    display: flex;
+    padding: 0 15px;
+    align-items: center;
+    position: absolute;
+    top: 11px;
   }
-  .progressbar__left {
-    padding: 5px 10px;
-    font-size: 1.5rem;
-    border-radius: 3px;
-    background: $secondColorContent;
+  .progressbar__title {
+    margin-right: 10px;
+    font-size: 1.45rem;
   }
-  .progressbar__right {
+  .progressbar__sum {
+    font-size: 1.7rem;
+    color: $secondColorApp;
+  }
+  .progressbar__percent {
     font-size: 1.5rem;
   }
 
