--- a/src/components/settings-action/settings-action.component.html
+++ b/src/components/settings-action/settings-action.component.html
@@ -1,3 +1,3 @@
-<button class="no-shadow" ion-button icon-only (click)="handlerClick()">
+<button class="no-shadow" ion-button icon-only clear (click)="handlerClick()">
     <ion-icon name="settings"></ion-icon>
 </button>
