--- a/src/components/transaction-form/transaction-form.component.html
+++ b/src/components/transaction-form/transaction-form.component.html
@@ -1,5 +1,3 @@
-
-
 <ion-segment [(ngModel)]="type" (ionChange)="handlerSelectType()">
     <ion-segment-button value="0">
         Расход
@@ -12,7 +10,7 @@
 <div padding>
     <div class="grid-row">
         <div class="grid-column-3 grid-padding grid-left" *ngFor="let category of categories;">
-            <div class="container-category-group">
+            <div class="container-category-group fadeIn animated">
                 <div [ngClass]="{'b-category': true, 'is-selected': category.id === idCategorySelected}" (click)="choiceCategory(category.id)">
                     <category-icon-component [name]="category.slug"></category-icon-component>
                     <div class="category__name">{{ category.name }}</div>
