--- a/src/pages/budget/budget.scss
+++ b/src/pages/budget/budget.scss
@@ -2,49 +2,83 @@ page-budget {
 
 }
 
+.b-budget-indicator {
+  width: 170px;
+  height: 170px;
+  margin: 15px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  border-radius: 100%;
+  border: 10px solid $secondColorContent;
+  transform: translateZ(0);
+  .budget-indicator__data {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    position: relative;
+    z-index: 2;
+  }
+  .budget-indicator__value {
+    margin-right: 5px;
+    font-size: 3rem;
+  }
+  .budget-indicator__percent {
+    font-size: 1.6rem;
+  }
+  .budget-indicator__filled {
+    width: 100%;
+    height: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    &.is-high {
+      background: $colorHigh;
+    }
+    &.is-middle {
+      background: $colorMiddle;
+    }
+    &.is-low {
+      background: $colorLow;
+    }
+  }
+}
+
+
+
 .container-budget-top {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  padding: 12px 0;
+  padding: 10px 0;
   align-items: center;
   justify-content: center;
   text-align: center;
-  background: darken($fistColorApp, 3%);
 }
 .budget-top-separator {
   margin: 0 8px;
 }
 .budget-top-item {
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   &.is-warning {
-    color: #e74b3c;
+    color: $colorLow;
   }
 }
 .budget-top-subtitle {
   width: 100%;
+  color: $secondColorApp;
 }
 
 
 //
 .container-budget-list {
-
+  margin: 16px 0;
 }
 .b-budget-item {
-  padding: 10px;
-  border-bottom: 1px solid $secondColorContent;
-  .budget-item__top {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  .budget-item__name {
-    padding-left: 15px;
-    font-size: 1.7rem;
-  }
-  .b-icon-category {
-    width: 50px;
-    height: 50px;
-    font-size: 3rem;
-  }
+  margin-bottom: 1px;
 }
