--- a/src/pages/templates/templates.html
+++ b/src/pages/templates/templates.html
@@ -14,13 +14,7 @@
 
 <ion-content>
 
-    <div *ngIf="totalCount == 0">
-        <div class="util-empty-box fadeIn animated">Нет созданных шаблонов</div>
-    </div>
-
     <div *ngIf="totalCount > 0">
-
-
         <ion-list>
             <ion-item-sliding *ngFor="let template of templates; let i = index;">
                 <ion-item>
@@ -35,9 +29,9 @@
         </ion-list>
     </div>
 
+    <empty-box-component *ngIf="totalCount == 0" [text]="emptyText"></empty-box-component>
 
     <br>
-
     <div class="util-align-center fadeIn animated" *ngIf="loadedTemplates">
         <button ion-button (click)="handlerClickCreate($event)">Создать новый</button>
     </div>
