--- a/src/theme/blocks/category.scss
+++ b/src/theme/blocks/category.scss
@@ -1,26 +1,21 @@
 .b-category {
-  width: auto;
-  display: inline-block;
+  display: block;
   padding: 10px 0;
   background: transparent;
   border-radius: 10px;
-  transition: 0.3s;
-  &:hover {
-    transform: scale(1.1);
-    transition: 0.3s;
-  }
-
   .category__name {
     display: block;
     width: 100%;
-    margin: 10px 0 0 0;
+    padding: 7px;
+    background: $secondColorContent;
     text-align: center;
+    border-radius: 30px;
     white-space: nowrap;
   }
 
   &.is-selected {
-    .category__name {
-      color: $fistColorApp
+    .category__name, .b-icon-category {
+      color: $firstColorApp;
     }
   }
 
