--- a/src/theme/components/datetime.scss
+++ b/src/theme/components/datetime.scss
@@ -1,6 +1,6 @@
 .container-datetime {
   position: relative;
-  background: darken($fistColorApp, 3%);
+  margin-bottom: 5px;
   ion-datetime {
     padding: 12px 15px;
     font-size: 1.6rem;
