--- a/src/theme/components/toast.scss
+++ b/src/theme/components/toast.scss
@@ -1,9 +1,12 @@
 .toast-md {
   .toast-wrapper {
-    max-width: 100%;
-    background: $fistColorApp;
+    background: transparent;
   }
   .toast-container {
-    min-height: 6.5rem;
+    max-width: 100%;
+    width: auto;
+    margin: 15px;
+    background: rgba(0, 0, 0, 0.65);
+    border-radius: 5px;
   }
 }
