--- a/src/theme/fonts/flaticon.scss
+++ b/src/theme/fonts/flaticon.scss
@@ -38,6 +38,28 @@ Creation date: 13/11/2016 18:59
   }
 }
 
+@font-face {
+  font-family: 'yanone_kaffeesatzbold';
+  src: url('../assets/fonts/yanonekaffeesatz-bold-webfont.woff2') format('woff2'),
+  url('../assets/fonts/yanonekaffeesatz-bold-webfont.woff') format('woff'),
+  url('../assets/fonts/yanonekaffeesatz-bold-webfont.ttf') format('truetype'),
+  url('../assets/fonts/yanonekaffeesatz-bold-webfont.svg#yanone_kaffeesatzbold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'yanone_kaffeesatzextralight';
+  src: url('../assets/fonts/yanonekaffeesatz-extralight-webfont.woff2') format('woff2'),
+  url('../assets/fonts/yanonekaffeesatz-extralight-webfont.woff') format('woff'),
+  url('../assets/fonts/yanonekaffeesatz-extralight-webfont.ttf') format('truetype'),
+  url('../assets/fonts/yanonekaffeesatz-extralight-webfont.svg#yanone_kaffeesatzextralight') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
 .flaticon-animals:before {
   content: "\f100";
 }
