--- a/src/components/progressbar/progressbar.component.scss
+++ b/src/components/progressbar/progressbar.component.scss
@@ -25,11 +25,11 @@
   }
   .progressbar__title {
     margin-right: 10px;
-    font-size: 1.45rem;
+    font-size: 1.5rem;
   }
   .progressbar__sum {
     font-size: 1.7rem;
-    color: $secondColorApp;
+    color: #FFF;
   }
   .progressbar__percent {
     font-size: 1.5rem;
