--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,7 +35,9 @@ $colors: (
   secondary:  #01A7F2,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  create:       #2ED85B,
+  update:       #297FB8,
+  remove:       #e74b3c
 );
 
 
