--- a/src/theme/components/datetime.scss
+++ b/src/theme/components/datetime.scss
@@ -1,9 +1,13 @@
 .container-datetime {
   position: relative;
-  margin-bottom: 5px;
+  width: 120px;
+  margin: 8px auto 20px;
+  background: $secondColorContent;
+  padding: 8px 0;
+  border-radius: 30px;
   ion-datetime {
-    padding: 12px 15px;
-    font-size: 1.6rem;
+    padding: 1px 15px;
+    font-size: 1.5rem;
     text-align: center;
   }
 }
