--- a/src/theme/libs/utils.scss
+++ b/src/theme/libs/utils.scss
@@ -10,3 +10,9 @@
   border-radius: 3px;
   background: $secondColorContent;
 }
+
+.util-subtitle {
+  width: 100%;
+  text-align: center;
+  color: $secondColorApp;
+}
