--- a/src/pages/templates/templates.html
+++ b/src/pages/templates/templates.html
@@ -15,31 +15,32 @@
 <ion-content>
 
     <div *ngIf="totalCount > 0">
-        <ion-list>
-            <ion-item-sliding *ngFor="let template of templates; let i = index;">
-                <ion-item>
-                    <transaction-item-component [transaction]="template"></transaction-item-component>
-                </ion-item>
-                <ion-item-options class="controls-template" side="right">
-                    <button ion-button icon-only color="create" (click)="createTransaction($event, template.templateId)">
-                        <ion-icon name="ios-add"></ion-icon>
-                    </button>
-                    <button ion-button icon-only color="update" (click)="updateTemplate($event, template)">
-                        <ion-icon name="ios-refresh"></ion-icon>
-                    </button>
-                    <button ion-button icon-only color="remove" (click)="deleteTemplate($event, template.templateId, i)">
-                        <ion-icon name="ios-close"></ion-icon>
-                    </button>
-                </ion-item-options>
-            </ion-item-sliding>
-        </ion-list>
+        <div class="container-templates-list">
+            <ion-list>
+                <ion-item-sliding *ngFor="let template of templates; let i = index;">
+                    <ion-item>
+                        <transaction-item-component [transaction]="template"></transaction-item-component>
+                    </ion-item>
+                    <ion-item-options class="controls-template" side="right">
+                        <button ion-button icon-only color="create" (click)="createTransaction($event, template.templateId)">
+                            <ion-icon name="ios-add"></ion-icon>
+                        </button>
+                        <button ion-button icon-only color="update" (click)="updateTemplate($event, template)">
+                            <ion-icon name="ios-refresh"></ion-icon>
+                        </button>
+                        <button ion-button icon-only color="remove" (click)="deleteTemplate($event, template.templateId, i)">
+                            <ion-icon name="ios-close"></ion-icon>
+                        </button>
+                    </ion-item-options>
+                </ion-item-sliding>
+            </ion-list>
+        </div>
     </div>
 
     <empty-box-component *ngIf="totalCount == 0" [text]="emptyText"></empty-box-component>
 
-    <br>
     <div class="util-align-center fadeIn animated" *ngIf="loadedTemplates">
-        <button ion-button (click)="createTemplate($event)">Создать новый</button>
+        <button style="margin-top: 10px;" ion-button (click)="createTemplate($event)">Создать новый</button>
     </div>
 
 
